# PelicanCtrl

./: CMakeLists.txt  README.md  manifest.xml  package.xml
include/: PelicanCtrl.h  PelicanPosCtrl.h  PositionVis.h
launch/: PelicanCtrl.launch  PelicanCtrl_parameters.yaml  sim.launch  sim_param.yaml
src/: PelicanCtrl.cpp  PelicanPosCtrl.cpp  PositionVis.cpp
src/PelicanCtrl/srv/: __init__.py  _periodic.py  _start_log.py
srv/: gotoPos.srv  gotoPosGPS.srv  gotoPos_body.srv
