<package>
  <name>pelican_ctrl</name>
  <version>1.1.0</version>
  <description>
    A Ros node that implements a PID for Pelican point to point navigation. 
  </description>
  <maintainer email="asadat@autonomylab.org">Seyed Abbas Sadat</maintainer>
  <license></license>
  <author email="asadat@autonomylab.org">Seyed Abbas Sadat</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>asctec_hl_comm</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rosconsole</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>control_toolbox</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>asctec_hl_comm</run_depend>
  <run_depend>message_runtime</run_depend>  
  <run_depend>rosconsole</run_depend>
 
</package>
